<resources>
    <string name="app_name">lampIsPower</string>
    <string name="ValueHint">Введите целое число</string>
    <string name="currentTag">Текущий тег:</string>
    <string name="Accept">Принять</string>
    <string name="Cancel">Отмена</string>
    <string name="Red">R</string>
    <string name="Green">G</string>
    <string name="Blue">B</string>
    <string name="ColorPreview">Предпросмотр цвета</string>
    <string name="Settings">Настройки</string>
    <string name="DestinationAddress">Адресс назначения:</string>
    <string name="DestinationPort">Порт:</string>
    <string name="ViewSendedPackets">Отобразить</string>
    <string name="SizesOfGrid">Размеры сетки:</string>
    <string name="Width">Ширина</string>
    <string name="Height">Высота</string>
    <string name="Save">Сохранить</string>
    <string name="Load">Загрузить</string>
    <string name="SaveName">Название:</string>
    <string name="SaveLayout">Сохранить сетку</string>
    <string name="LoadLayout">Загрузить сетку</string>
    <string name="ImageName">Название картинки:</string>
    <string name="ImagePreview">Предпросмотр картинки</string>
    <string name="Live">Live</string>
    <string name="Gallery">Галерея</string>
    <string name="SendPerion">Период передачи:</string>
    <string name="ReceivePerion">Период приёма:</string>
    <string name="PlayPause">Играть/Пауза</string>
    <string name="Play">Играть</string>
    <string name="Pause">Пауза</string>
</resources>