<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCurrentTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentTag"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etTagNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ValueHint"
        android:inputType="number"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:text="@string/Accept" />

        <Button
            android:id="@+id/bCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:text="@string/Cancel" />
    </LinearLayout>
</LinearLayout>