<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:paddingLeft="6dp"
            android:text="@string/Red"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <SeekBar
            android:id="@+id/sbRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:max="255"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:paddingLeft="6dp"
            android:text="@string/Green"
            android:textColor="#00FF0A"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <SeekBar
            android:id="@+id/sbGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:max="255"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:paddingLeft="6dp"
            android:text="@string/Blue"
            android:textColor="#00E2FF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <SeekBar
            android:id="@+id/sbBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:max="255"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/ColorPreview"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/colorPreview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bAcceptColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:text="@string/Accept" />

        <Button
            android:id="@+id/bCancelColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:text="@string/Cancel" />
    </LinearLayout>
</LinearLayout>